@@ -124,9 +124,13 @@ project.ext {
     website = 'https://xpipe.io'
     sourceWebsite = isStage ? 'https://github.com/xpipe-io/xpipe-ptb' : 'https://github.com/xpipe-io/xpipe'
     authors = 'Christopher Schnick'
-    javafxVersion = '24-ea+5'
+    devJavafxVersion = '25-ea+10'
     platformName = getPlatformName()
     jvmRunArgs = [
+            "--enable-native-access=com.sun.jna",
+            "--enable-native-access=javafx.graphics",
+            "--enable-native-access=javafx.web",
+            "--sun-misc-unsafe-memory-access=allow",
             "--add-opens", "java.base/java.lang=io.xpipe.app",
             "--add-opens", "java.base/java.lang=io.xpipe.core",
             "--add-opens", "java.desktop/java.awt=io.xpipe.app",
@@ -136,6 +140,7 @@ project.ext {
             "--add-exports", "jdk.zipfs/jdk.nio.zipfs=io.xpipe.modulefs",
             "--add-opens", "javafx.graphics/com.sun.glass.ui=io.xpipe.app",
             "--add-opens", "javafx.graphics/javafx.stage=io.xpipe.app",
+            "--add-opens", "javafx.graphics/com.sun.javafx.tk=io.xpipe.app",
             "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=io.xpipe.app",
             "-Dio.xpipe.app.arch=$rootProject.arch",
             "-Dfile.encoding=UTF-8",
@@ -143,6 +148,9 @@ project.ext {
             "-Djavafx.preloader=io.xpipe.app.core.AppPreloader",
             "-Djdk.virtualThreadScheduler.parallelism=8"
     ]
+
+    // Use project liliput
+    jvmRunArgs += ['-XX:+UnlockExperimentalVMOptions', '-XX:+UseCompactObjectHeaders']
 
     // GC config
     jvmRunArgs += ['-XX:+UseG1GC', '-Xms300m', '-Xmx4G', '-XX:GCTimeRatio=9', '-XX:+UseStringDeduplication'];
@@ -164,8 +172,12 @@ project.ext {
         signingPassword = ''
     }
     deeplApiKey = findProperty('DEEPL_API_KEY')
-    customJavaFxPath = null
+
+    // Define a custom JavaFX SDK location
+    // customJavaFxPath = null
+
     bundleCds = ci && fullVersion
+
     windowsSchemaCanonicalVersion = getWindowsSchemaCanonicalVersion()
 }
 
